# agent-datakit

./: .gitignore  MANUAL.md  README.md  SPEC.md  dist-workspace.toml
.github/workflows/: release.yml  rust.yml  typescript.yml
agentfs/: Cargo.toml
agentfs/.cargo/: config.toml
agentfs/src/: lib.rs  main.rs
agentfs/src/sandbox/: mod.rs
agentfs/src/syscall/: file.rs  mod.rs  stat.rs
agentfs/src/vfs/: mod.rs  mount.rs  passthrough.rs  sqlite.rs
agentfs/tests/: test-sqlite-mount.sh
agentos/: CONTRIBUTING.md  Cargo.toml
agentos/src/: main.rs
agentos/src/syscall/: file.rs  process.rs  xattr.rs
agentos/src/vfs/: fdtable.rs  file.rs  mod.rs  passthrough.rs  sqlite.rs
agentos/tests/: .gitignore  all.sh  ls.sh  test-file-ops.sh
cli/: Cargo.toml  build.rs  dist-workspace.toml
cli/scripts/: install-deps.sh
cli/src/: main.rs
cli/src/cmd/: mod.rs
cli/tests/: all.sh  test-file-ops.sh  test-init.sh  test-run-bash.sh
examples/claude-agent/research-assistant/: .env.example  .gitignore
examples/claude-agent/research-assistant/src/utils/: agentfs.ts
examples/mastra/research-assistant/src/mastra/utils/: agentfs.ts  pdf.ts
examples/openai-agents/research-assistant/: .env.example
examples/openai-agents/research-assistant/src/utils/: pdf.ts
rust-sdk/: Cargo.toml
rust-sdk/src/: filesystem.rs  toolcalls.rs
sandbox/: Cargo.toml
sandbox/src/: lib.rs
sandbox/src/syscall/: file.rs  mod.rs  process.rs  stat.rs
sandbox/src/vfs/: fdtable.rs  mod.rs  mount.rs  passthrough.rs  sqlite.rs
scripts/: update-version.py
sdk/: package-lock.json  package.json
sdk/examples/filesystem/: index.ts  package.json
sdk/examples/kvstore/: index.ts  package.json
sdk/examples/toolcalls/: index.ts
sdk/python/: pyproject.toml
sdk/python/src/agentfs/: __init__.py  filesystem.py  kv.py  toolcalls.py
sdk/python/tests/: test_agentfs.py  test_filesystem.py  test_kv.py  test_toolcalls.py
sdk/rust/: Cargo.toml
sdk/rust/src/: filesystem.rs  kvstore.rs  lib.rs  toolcalls.rs
sdk/src/: index.ts  kvstore.ts
sdk/tests/: filesystem.test.ts  index.test.ts  kvstore.test.ts  toolcalls.test.ts
sdk/typescript/: .gitignore  package-lock.json  package.json  vitest.config.ts
sdk/typescript/examples/filesystem/: index.ts
sdk/typescript/examples/kvstore/: index.ts
sdk/typescript/examples/toolcalls/: index.ts
sdk/typescript/examples/turso-cloud/: README.md  custom.ts  simple.ts
sdk/typescript/src/: filesystem.ts  index.ts  sync.ts
sdk/typescript/src/providers/: turso.ts
sdk/typescript/tests/: index.test.ts
typescript-sdk/: package.json
typescript-sdk/src/: filesystem.ts  toolcalls.ts
typescript-sdk/tests/: filesystem.test.ts
