[package]
name = "agentos"
version = "0.1.0"
edition = "2021"

[dependencies]
reverie = { git = "https://github.com/facebookexperimental/reverie" }
reverie-ptrace = { git = "https://github.com/facebookexperimental/reverie" }
reverie-process = { git = "https://github.com/facebookexperimental/reverie" }
reverie-util = { git = "https://github.com/facebookexperimental/reverie" }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1.0"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
libc = "0.2"
turso = "0.2.2"

[dev-dependencies]
tempfile = "3"
