[package]
name = "agentfs"
version = "0.1.0-pre.3"
edition = "2021"
repository = "https://github.com/tursodatabase/agentfs"

[[bin]]
name = "agentfs"
path = "src/main.rs"

[dependencies]
agentfs-sdk = { path = "../sdk/rust" }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1.0"
turso = "0.3.2"
serde = { version = "1.0", features = ["derive"] }

# Linux-only dependencies for sandbox functionality
[target.'cfg(target_os = "linux")'.dependencies]
agentfs-sandbox = { path = "../sandbox" }
reverie = { git = "https://github.com/facebookexperimental/reverie" }
reverie-ptrace = { git = "https://github.com/facebookexperimental/reverie" }
reverie-process = { git = "https://github.com/facebookexperimental/reverie" }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
