[package]
name = "agentfs-sandbox"
version = "0.1.0"
edition = "2021"

[dependencies]
agentfs-sdk = { path = "../rust-sdk" }
reverie = { git = "https://github.com/facebookexperimental/reverie" }
reverie-ptrace = { git = "https://github.com/facebookexperimental/reverie" }
reverie-process = { git = "https://github.com/facebookexperimental/reverie" }
reverie-util = { git = "https://github.com/facebookexperimental/reverie" }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
libc = "0.2"

[dev-dependencies]
tempfile = "3"
